# Simple-Interview-Audio-Processing

./: .gitignore  README.md  README_EN.md  Windows_user_tutorial.md  config.json  dialogs_output.md  dialogs_output_202408201256.md  docker-compose.yml  env.template  macOS_user_tutorial.md  poetry.md  pyproject.toml  start_funasr_services.sh
data/: database.xlsx
interview/: ChatgptManager.py  Config.py  DialogManager.py  Interviewer.py  MultimodeManager.py  R2Uploader.py  RagManager.py  RequestSender.py  Rookie.py  SaveFile.py  ScreenShot.py  audioTest.py  main.py
prompt/: algorithm.md  fix.md  general.md  long_screenshot.md  ocr.md  personality.md  step1.md  step2.md
workflows/prompt_1/: step1.md  step2.md
workflows/prompt_2/: step1.md
